src/core_server/internal/parsing/option_declaration/autogenerated/OptionDeclarationParser.cpp

// Generated from OptionDeclarationParser.g4 by ANTLR 4.12.0


#include "OptionDeclarationParserVisitor.h"

#include "OptionDeclarationParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct OptionDeclarationParserStaticData final {
  OptionDeclarationParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  OptionDeclarationParserStaticData(const OptionDeclarationParserStaticData&) = delete;
  OptionDeclarationParserStaticData(OptionDeclarationParserStaticData&&) = delete;
  OptionDeclarationParserStaticData& operator=(const OptionDeclarationParserStaticData&) = delete;
  OptionDeclarationParserStaticData& operator=(OptionDeclarationParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag optiondeclarationparserParserOnceFlag;
OptionDeclarationParserStaticData *optiondeclarationparserParserStaticData = nullptr;

void optiondeclarationparserParserInitialize() {
  assert(optiondeclarationparserParserStaticData == nullptr);
  auto staticData = std::make_unique<OptionDeclarationParserStaticData>(
    std::vector<std::string>{
      "parse", "error", "option_declaration", "quarantine_policy", "stream_names", 
      "time_span", "hour_span", "minute_span", "second_span", "stream_name", 
      "any_name", "number", "integer", "double"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "'{'", "'}'", "','"
    },
    std::vector<std::string>{
      "", "WS", "K_CREATE", "K_QUARANTINE", "K_FIXED_TIME", "K_MAX_DELAY", 
      "K_BOUNDED_TIME", "K_DIRECT", "K_HOURS", "K_MINUTES", "K_SECONDS", 
      "LEFT_CURLY_BRACKET", "RIGHT_CURLY_BRACKET", "COMMA", "DOUBLE_LITERAL", 
      "INTEGER_LITERAL", "NUMERICAL_EXPONENT", "IDENTIFIER", "UNEXPECTED_CHAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  optiondeclarationparserParserStaticData = staticData.release();
}

}

OptionDeclarationParser::OptionDeclarationParser(TokenStream *input) : OptionDeclarationParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

OptionDeclarationParser::OptionDeclarationParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  OptionDeclarationParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *optiondeclarationparserParserStaticData->atn, optiondeclarationparserParserStaticData->decisionToDFA, optiondeclarationparserParserStaticData->sharedContextCache, options);
}

OptionDeclarationParser::~OptionDeclarationParser() {
  delete _interpreter;
}

const atn::ATN& OptionDeclarationParser::getATN() const {
  return *optiondeclarationparserParserStaticData->atn;
}

std::string OptionDeclarationParser::getGrammarFileName() const {
  return "OptionDeclarationParser.g4";
}

const std::vector<std::string>& OptionDeclarationParser::getRuleNames() const {
  return optiondeclarationparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& OptionDeclarationParser::getVocabulary() const {
  return optiondeclarationparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView OptionDeclarationParser::getSerializedATN() const {
  return optiondeclarationparserParserStaticData->serializedATN;
}


//----------------- ParseContext ------------------------------------------------------------------

OptionDeclarationParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OptionDeclarationParser::ParseContext::EOF() {
  return getToken(OptionDeclarationParser::EOF, 0);
}

std::vector<OptionDeclarationParser::Option_declarationContext *> OptionDeclarationParser::ParseContext::option_declaration() {
  return getRuleContexts<OptionDeclarationParser::Option_declarationContext>();
}

OptionDeclarationParser::Option_declarationContext* OptionDeclarationParser::ParseContext::option_declaration(size_t i) {
  return getRuleContext<OptionDeclarationParser::Option_declarationContext>(i);
}

std::vector<OptionDeclarationParser::ErrorContext *> OptionDeclarationParser::ParseContext::error() {
  return getRuleContexts<OptionDeclarationParser::ErrorContext>();
}

OptionDeclarationParser::ErrorContext* OptionDeclarationParser::ParseContext::error(size_t i) {
  return getRuleContext<OptionDeclarationParser::ErrorContext>(i);
}


size_t OptionDeclarationParser::ParseContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleParse;
}


std::any OptionDeclarationParser::ParseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitParse(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::ParseContext* OptionDeclarationParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, OptionDeclarationParser::RuleParse);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OptionDeclarationParser::K_CREATE

    || _la == OptionDeclarationParser::UNEXPECTED_CHAR) {
      setState(30);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case OptionDeclarationParser::K_CREATE: {
          setState(28);
          option_declaration();
          break;
        }

        case OptionDeclarationParser::UNEXPECTED_CHAR: {
          setState(29);
          error();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(34);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(35);
    match(OptionDeclarationParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ErrorContext ------------------------------------------------------------------

OptionDeclarationParser::ErrorContext::ErrorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OptionDeclarationParser::ErrorContext::UNEXPECTED_CHAR() {
  return getToken(OptionDeclarationParser::UNEXPECTED_CHAR, 0);
}


size_t OptionDeclarationParser::ErrorContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleError;
}


std::any OptionDeclarationParser::ErrorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitError(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::ErrorContext* OptionDeclarationParser::error() {
  ErrorContext *_localctx = _tracker.createInstance<ErrorContext>(_ctx, getState());
  enterRule(_localctx, 2, OptionDeclarationParser::RuleError);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    antlrcpp::downCast<ErrorContext *>(_localctx)->unexpected_charToken = match(OptionDeclarationParser::UNEXPECTED_CHAR);

         throw new RuntimeException("UNEXPECTED_CHAR=" + (antlrcpp::downCast<ErrorContext *>(_localctx)->unexpected_charToken != nullptr ? antlrcpp::downCast<ErrorContext *>(_localctx)->unexpected_charToken->getText() : ""));
       
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Option_declarationContext ------------------------------------------------------------------

OptionDeclarationParser::Option_declarationContext::Option_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OptionDeclarationParser::Option_declarationContext::K_CREATE() {
  return getToken(OptionDeclarationParser::K_CREATE, 0);
}

tree::TerminalNode* OptionDeclarationParser::Option_declarationContext::K_QUARANTINE() {
  return getToken(OptionDeclarationParser::K_QUARANTINE, 0);
}

tree::TerminalNode* OptionDeclarationParser::Option_declarationContext::LEFT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::LEFT_CURLY_BRACKET, 0);
}

tree::TerminalNode* OptionDeclarationParser::Option_declarationContext::RIGHT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::RIGHT_CURLY_BRACKET, 0);
}

std::vector<OptionDeclarationParser::Quarantine_policyContext *> OptionDeclarationParser::Option_declarationContext::quarantine_policy() {
  return getRuleContexts<OptionDeclarationParser::Quarantine_policyContext>();
}

OptionDeclarationParser::Quarantine_policyContext* OptionDeclarationParser::Option_declarationContext::quarantine_policy(size_t i) {
  return getRuleContext<OptionDeclarationParser::Quarantine_policyContext>(i);
}


size_t OptionDeclarationParser::Option_declarationContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleOption_declaration;
}


std::any OptionDeclarationParser::Option_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitOption_declaration(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::Option_declarationContext* OptionDeclarationParser::option_declaration() {
  Option_declarationContext *_localctx = _tracker.createInstance<Option_declarationContext>(_ctx, getState());
  enterRule(_localctx, 4, OptionDeclarationParser::RuleOption_declaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(OptionDeclarationParser::K_CREATE);
    setState(41);
    match(OptionDeclarationParser::K_QUARANTINE);
    setState(42);
    match(OptionDeclarationParser::LEFT_CURLY_BRACKET);
    setState(46);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 240) != 0)) {
      setState(43);
      quarantine_policy();
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(49);
    match(OptionDeclarationParser::RIGHT_CURLY_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Quarantine_policyContext ------------------------------------------------------------------

OptionDeclarationParser::Quarantine_policyContext::Quarantine_policyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t OptionDeclarationParser::Quarantine_policyContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleQuarantine_policy;
}

void OptionDeclarationParser::Quarantine_policyContext::copyFrom(Quarantine_policyContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Max_delay_policyContext ------------------------------------------------------------------

tree::TerminalNode* OptionDeclarationParser::Max_delay_policyContext::K_MAX_DELAY() {
  return getToken(OptionDeclarationParser::K_MAX_DELAY, 0);
}

OptionDeclarationParser::Time_spanContext* OptionDeclarationParser::Max_delay_policyContext::time_span() {
  return getRuleContext<OptionDeclarationParser::Time_spanContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Max_delay_policyContext::LEFT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::LEFT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Stream_namesContext* OptionDeclarationParser::Max_delay_policyContext::stream_names() {
  return getRuleContext<OptionDeclarationParser::Stream_namesContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Max_delay_policyContext::RIGHT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::RIGHT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Max_delay_policyContext::Max_delay_policyContext(Quarantine_policyContext *ctx) { copyFrom(ctx); }


std::any OptionDeclarationParser::Max_delay_policyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitMax_delay_policy(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Bounded_time_policyContext ------------------------------------------------------------------

tree::TerminalNode* OptionDeclarationParser::Bounded_time_policyContext::K_BOUNDED_TIME() {
  return getToken(OptionDeclarationParser::K_BOUNDED_TIME, 0);
}

OptionDeclarationParser::Time_spanContext* OptionDeclarationParser::Bounded_time_policyContext::time_span() {
  return getRuleContext<OptionDeclarationParser::Time_spanContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Bounded_time_policyContext::LEFT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::LEFT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Stream_namesContext* OptionDeclarationParser::Bounded_time_policyContext::stream_names() {
  return getRuleContext<OptionDeclarationParser::Stream_namesContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Bounded_time_policyContext::RIGHT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::RIGHT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Bounded_time_policyContext::Bounded_time_policyContext(Quarantine_policyContext *ctx) { copyFrom(ctx); }


std::any OptionDeclarationParser::Bounded_time_policyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitBounded_time_policy(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Direct_policyContext ------------------------------------------------------------------

tree::TerminalNode* OptionDeclarationParser::Direct_policyContext::K_DIRECT() {
  return getToken(OptionDeclarationParser::K_DIRECT, 0);
}

tree::TerminalNode* OptionDeclarationParser::Direct_policyContext::LEFT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::LEFT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Stream_namesContext* OptionDeclarationParser::Direct_policyContext::stream_names() {
  return getRuleContext<OptionDeclarationParser::Stream_namesContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Direct_policyContext::RIGHT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::RIGHT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Direct_policyContext::Direct_policyContext(Quarantine_policyContext *ctx) { copyFrom(ctx); }


std::any OptionDeclarationParser::Direct_policyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitDirect_policy(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Fixed_time_policyContext ------------------------------------------------------------------

tree::TerminalNode* OptionDeclarationParser::Fixed_time_policyContext::K_FIXED_TIME() {
  return getToken(OptionDeclarationParser::K_FIXED_TIME, 0);
}

OptionDeclarationParser::Time_spanContext* OptionDeclarationParser::Fixed_time_policyContext::time_span() {
  return getRuleContext<OptionDeclarationParser::Time_spanContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Fixed_time_policyContext::LEFT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::LEFT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Stream_namesContext* OptionDeclarationParser::Fixed_time_policyContext::stream_names() {
  return getRuleContext<OptionDeclarationParser::Stream_namesContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Fixed_time_policyContext::RIGHT_CURLY_BRACKET() {
  return getToken(OptionDeclarationParser::RIGHT_CURLY_BRACKET, 0);
}

OptionDeclarationParser::Fixed_time_policyContext::Fixed_time_policyContext(Quarantine_policyContext *ctx) { copyFrom(ctx); }


std::any OptionDeclarationParser::Fixed_time_policyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitFixed_time_policy(this);
  else
    return visitor->visitChildren(this);
}
OptionDeclarationParser::Quarantine_policyContext* OptionDeclarationParser::quarantine_policy() {
  Quarantine_policyContext *_localctx = _tracker.createInstance<Quarantine_policyContext>(_ctx, getState());
  enterRule(_localctx, 6, OptionDeclarationParser::RuleQuarantine_policy);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OptionDeclarationParser::K_FIXED_TIME: {
        _localctx = _tracker.createInstance<OptionDeclarationParser::Fixed_time_policyContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(51);
        match(OptionDeclarationParser::K_FIXED_TIME);
        setState(52);
        time_span();
        setState(53);
        match(OptionDeclarationParser::LEFT_CURLY_BRACKET);
        setState(54);
        stream_names();
        setState(55);
        match(OptionDeclarationParser::RIGHT_CURLY_BRACKET);
        break;
      }

      case OptionDeclarationParser::K_BOUNDED_TIME: {
        _localctx = _tracker.createInstance<OptionDeclarationParser::Bounded_time_policyContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(57);
        match(OptionDeclarationParser::K_BOUNDED_TIME);
        setState(58);
        time_span();
        setState(59);
        match(OptionDeclarationParser::LEFT_CURLY_BRACKET);
        setState(60);
        stream_names();
        setState(61);
        match(OptionDeclarationParser::RIGHT_CURLY_BRACKET);
        break;
      }

      case OptionDeclarationParser::K_DIRECT: {
        _localctx = _tracker.createInstance<OptionDeclarationParser::Direct_policyContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(63);
        match(OptionDeclarationParser::K_DIRECT);
        setState(64);
        match(OptionDeclarationParser::LEFT_CURLY_BRACKET);
        setState(65);
        stream_names();
        setState(66);
        match(OptionDeclarationParser::RIGHT_CURLY_BRACKET);
        break;
      }

      case OptionDeclarationParser::K_MAX_DELAY: {
        _localctx = _tracker.createInstance<OptionDeclarationParser::Max_delay_policyContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(68);
        match(OptionDeclarationParser::K_MAX_DELAY);
        setState(69);
        time_span();
        setState(70);
        match(OptionDeclarationParser::LEFT_CURLY_BRACKET);
        setState(71);
        stream_names();
        setState(72);
        match(OptionDeclarationParser::RIGHT_CURLY_BRACKET);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stream_namesContext ------------------------------------------------------------------

OptionDeclarationParser::Stream_namesContext::Stream_namesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OptionDeclarationParser::Stream_nameContext *> OptionDeclarationParser::Stream_namesContext::stream_name() {
  return getRuleContexts<OptionDeclarationParser::Stream_nameContext>();
}

OptionDeclarationParser::Stream_nameContext* OptionDeclarationParser::Stream_namesContext::stream_name(size_t i) {
  return getRuleContext<OptionDeclarationParser::Stream_nameContext>(i);
}

std::vector<tree::TerminalNode *> OptionDeclarationParser::Stream_namesContext::COMMA() {
  return getTokens(OptionDeclarationParser::COMMA);
}

tree::TerminalNode* OptionDeclarationParser::Stream_namesContext::COMMA(size_t i) {
  return getToken(OptionDeclarationParser::COMMA, i);
}


size_t OptionDeclarationParser::Stream_namesContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleStream_names;
}


std::any OptionDeclarationParser::Stream_namesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitStream_names(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::Stream_namesContext* OptionDeclarationParser::stream_names() {
  Stream_namesContext *_localctx = _tracker.createInstance<Stream_namesContext>(_ctx, getState());
  enterRule(_localctx, 8, OptionDeclarationParser::RuleStream_names);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    stream_name();
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OptionDeclarationParser::COMMA) {
      setState(77);
      match(OptionDeclarationParser::COMMA);
      setState(78);
      stream_name();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Time_spanContext ------------------------------------------------------------------

OptionDeclarationParser::Time_spanContext::Time_spanContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OptionDeclarationParser::Hour_spanContext* OptionDeclarationParser::Time_spanContext::hour_span() {
  return getRuleContext<OptionDeclarationParser::Hour_spanContext>(0);
}

OptionDeclarationParser::Minute_spanContext* OptionDeclarationParser::Time_spanContext::minute_span() {
  return getRuleContext<OptionDeclarationParser::Minute_spanContext>(0);
}

OptionDeclarationParser::Second_spanContext* OptionDeclarationParser::Time_spanContext::second_span() {
  return getRuleContext<OptionDeclarationParser::Second_spanContext>(0);
}


size_t OptionDeclarationParser::Time_spanContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleTime_span;
}


std::any OptionDeclarationParser::Time_spanContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitTime_span(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::Time_spanContext* OptionDeclarationParser::time_span() {
  Time_spanContext *_localctx = _tracker.createInstance<Time_spanContext>(_ctx, getState());
  enterRule(_localctx, 10, OptionDeclarationParser::RuleTime_span);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(84);
      hour_span();
      break;
    }

    default:
      break;
    }
    setState(88);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(87);
      minute_span();
      break;
    }

    default:
      break;
    }
    setState(91);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == OptionDeclarationParser::INTEGER_LITERAL) {
      setState(90);
      second_span();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Hour_spanContext ------------------------------------------------------------------

OptionDeclarationParser::Hour_spanContext::Hour_spanContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OptionDeclarationParser::IntegerContext* OptionDeclarationParser::Hour_spanContext::integer() {
  return getRuleContext<OptionDeclarationParser::IntegerContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Hour_spanContext::K_HOURS() {
  return getToken(OptionDeclarationParser::K_HOURS, 0);
}


size_t OptionDeclarationParser::Hour_spanContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleHour_span;
}


std::any OptionDeclarationParser::Hour_spanContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitHour_span(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::Hour_spanContext* OptionDeclarationParser::hour_span() {
  Hour_spanContext *_localctx = _tracker.createInstance<Hour_spanContext>(_ctx, getState());
  enterRule(_localctx, 12, OptionDeclarationParser::RuleHour_span);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    integer();
    setState(94);
    match(OptionDeclarationParser::K_HOURS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Minute_spanContext ------------------------------------------------------------------

OptionDeclarationParser::Minute_spanContext::Minute_spanContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OptionDeclarationParser::IntegerContext* OptionDeclarationParser::Minute_spanContext::integer() {
  return getRuleContext<OptionDeclarationParser::IntegerContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Minute_spanContext::K_MINUTES() {
  return getToken(OptionDeclarationParser::K_MINUTES, 0);
}


size_t OptionDeclarationParser::Minute_spanContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleMinute_span;
}


std::any OptionDeclarationParser::Minute_spanContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitMinute_span(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::Minute_spanContext* OptionDeclarationParser::minute_span() {
  Minute_spanContext *_localctx = _tracker.createInstance<Minute_spanContext>(_ctx, getState());
  enterRule(_localctx, 14, OptionDeclarationParser::RuleMinute_span);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    integer();
    setState(97);
    match(OptionDeclarationParser::K_MINUTES);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Second_spanContext ------------------------------------------------------------------

OptionDeclarationParser::Second_spanContext::Second_spanContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OptionDeclarationParser::IntegerContext* OptionDeclarationParser::Second_spanContext::integer() {
  return getRuleContext<OptionDeclarationParser::IntegerContext>(0);
}

tree::TerminalNode* OptionDeclarationParser::Second_spanContext::K_SECONDS() {
  return getToken(OptionDeclarationParser::K_SECONDS, 0);
}


size_t OptionDeclarationParser::Second_spanContext::getRuleIndex() const {
  return OptionDeclarationParser::RuleSecond_span;
}


std::any OptionDeclarationParser::Second_spanContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OptionDeclarationParserVisitor*>(visitor))
    return parserVisitor->visitSecond_span(this);
  else
    return visitor->visitChildren(this);
}

OptionDeclarationParser::Second_spanContext* OptionDeclarationParser::second_span() {
  Second_spanContext *_localctx = _tracker.createInstance<Second_spanContext>(_ctx, getState());
  enterRule(_localctx, 16, OptionDeclarationParser::RuleSecond_span);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    integer();
    setState(100);
    match(OptionDeclarationParser::K_SECONDS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stream_nameContext ------------------------------------------------------------------

OptionDeclarationParser::Stream_nameContext::Stream_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OptionDeclarationParser::Any_nameContext* OptionDeclarationParser::Stream_nameContext::any_name() {
  return getRuleContext<OptionDeclarationParser::Any_nameContext>(0);
}

